<resources>
    <string name="app_name">Inventory-II</string>
    <string name="productName">Product name</string>
    <string name="productPrice">Product price</string>
    <string name="productQuantity">Product quantity</string>
    <string name="supplierName">Supplier name</string>
    <string name="supplierPhone">Supplier phone</string>
    <string name="addToInventory">Save</string>
    <string name="viewResult">Show all</string>
    <string name="error">You must enter a value.</string>
    <string name="successmsg">Product added successfully.</string>
    <string name="failedmsg">Failed to add the product.</string>
    <string name="errormsg">No Products</string>
    <string name="errormsg2">Press the add button to add new product</string>
    <string name="placeholder">Place holder</string>
    <string name="saleBtn">Sale</string>
    <string name="delete_the_product">Delete products</string>
    <string name="call_supplier">Call Supplier</string>
    <string name="add_product">Add</string>
    <string name="edit_product">Update</string>
    <string name="insert_product_failed">Failed to insert new product</string>
    <string name="insert_product_success">New product added successfully</string>
    <string name="update_product_failed">Failed to update product</string>
    <string name="update_product_success">Product updated successfully</string>
    <string name="delete_product_failed">Failed to delete product</string>
    <string name="delete_product_success">Product deleted successfully</string>
    <string name="negativeQuantity">Quantity Can\'t be a negative value</string>
    <string name="negativePrice">Price Can\'t be a negative value</string>
    <string name="mustenterdata">You must enter data</string>
    <string name="noactivity">Activity not found</string>
    <string name="pricemissing">Product price is missing</string>
    <string name="supplierphonemissing">Supplier Phone is missing</string>
    <string name="suppliernameemissing">Supplier name is missing</string>
    <string name="productnamemissing">Product name is missing</string>
    <string name="productpricemissing">Product price is missing</string>
    <string name="productquantitymissing">Product quantity is missing</string>
    <string name="failedupdate">Updating is not supported here for </string>
    <string name="deleteunsupported">Deleting is not supported here for </string>
    <string name="failedtoinsert">Failed to insert a row for </string>
    <string name="cantquery">Cannot query because it is an unknown URI </string>
    <string name="addone">+</string>
    <string name="removeone">-</string>
</resources>
